fixed dark mode

--- a/projects/--boilerbase--/php-pssst/styles/settings.css
+++ b/projects/--boilerbase--/php-pssst/styles/settings.css
@@ -37,7 +37,8 @@ html {
 
 		--corners: 10px; /* or whatevers */
 
-		--paper: red;
-		--ink: yellow;
+		--paper: hsla(217, 6%, 17%, 1.00);
+		--paper2:  hsla(217, 8%, 13%, 1.00);
+		--ink: hsla(0, 0%, 96%, 1.00);
 	}
 }
