--- a/projects/flashcards/styles/site.css
+++ b/projects/flashcards/styles/site.css
@@ -28,7 +28,7 @@
 body {
 	background-color: var(--paper);
 	color: var(--ink);
-	background-color: #f5f5f5;
+
 }
 
 .my-fantastic-image {
@@ -46,10 +46,10 @@ body {
 
 
 card-module {
-	background-color: white;
+	background-color: var(--paper2);
 	min-height: 620px;
 	gap: 30px;
-	padding: 10px;
+	padding: 20px;
 	display: grid;
 	grid-template-rows: 0.1fr 1fr;
 	grid-template-columns: 1fr;
@@ -154,4 +154,29 @@ flash-card code {
 .card-count span.due-0 {
 	display: none ;
 
+}
+
+
+header {
+	font-family: monospace;
+}
+/*//category*/
+.category {
+	
+	border-radius: 4px;
+	padding: 10px 20px;
+}
+.category.shortcut {
+	
+
+    background-color: #fafafa;
+    box-shadow: 1px 1px 2px 0 rgba(0,0,0,0.5),-1px -1px 2px 0 rgba(0,0,0,0.05);
+    color: black;
+
+}
+
+@media (prefers-color-scheme: dark) {
+	.category {
+		filter: invert(100%);
+	}
 }
