--- a/projects/todo-app/styles/site.css
+++ b/projects/todo-app/styles/site.css
@@ -52,7 +52,7 @@ todo-app {
 	gap: 10px;
 	margin-top: 30px;
 	padding: 20px;
-	background-color: whitesmoke;
+	background-color: var(--paper2);
 	align-items: start;
 }
 
@@ -68,7 +68,7 @@ button {
 todo-list {
 	/* 	outline: 3px solid blue; */
 	padding: 15px;
-	background-color: hsla(0, 0%, 90%, 1);
+	background-color: var(--paper);
 	position: relative;
 	display: grid;
 	gap:  20px;
@@ -77,7 +77,7 @@ todo-list {
 }
 todo-card {
 	outline: 2px solid black;
-	background-color: wheat;
+	background-color: var(--paper2);
 	padding: 10px;
 	display: grid;
 	gap: 10px;
